--- a/test/test.html
+++ b/test/test.html
@@ -21,35 +21,24 @@
     </style>
 </head>
 <body>
-  <div class="container-lg container container-md">
-    <div class="row wrap">
-      <div class="md-6 lg-3">
-        <div class="row">
-          <div class="md-4 lg-6">t1</div>
-          <div class="md-4 lg-6">t1</div>
-        </div>
-      </div>
-      <div class="md-6 lg-3">
-        <div class="row">
-          <div class="md-1">t2</div>
-        </div>
-      </div>
-      <div class="md-6 lg-3">
-        <div class="row">
-          <div class="md-1">t3</div>
-        </div>
-      </div>
-      <div class="md-6 lg-3">
-        <div class="row">
-          <div class="md-1">t4</div>
-        </div>
-      </div>
-      <div class="md-6 lg-3">4</div>
-      <div class="md-6 lg-3">5</div>
-      <div class="md-6 lg-3">6</div>
-      <div class="md-6 lg-3">7</div>
-      <div class="md-6 lg-3">8</div>
-    </div>
+  <div id="sideNavigation" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="#">Trang Chủ</a>
+    <a href="#">Features</a>
+    <a href="#">Contact Us</a>
+  </div>
+  <nav class="topnav">
+    <a href="#" onclick="openNav()">
+      <svg width="30" height="30" id="icoOpen">
+          <path d="M0,5 30,5" stroke="#000" stroke-width="5"/>
+          <path d="M0,14 30,14" stroke="#000" stroke-width="5"/>
+          <path d="M0,23 30,23" stroke="#000" stroke-width="5"/>
+      </svg>
+    </a>
+  </nav>
+  
+  <div id="main">
+  <!-- Add all your websites page content here -->
   </div>
       
       <!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
