--- a/site/main.html
+++ b/site/main.html
@@ -32,6 +32,22 @@
         <div class="md-12 lg-12">
           <!-- Search -->
           <div class="header-search">
+            <div class="navbar-menu">
+              <div id="sideNavigation" class="sidenav">
+                <img src="imgaes/ABC.png" alt="" height="auto" style="width: 50px; margin-left: 30px;">
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+              </div>
+              <nav class="topnav">
+                <a href="#" onclick="openNav()">
+                  <svg width="30" height="30" id="icoOpen">
+                    <path d="M0,5 30,5" stroke="#000" stroke-width="5" />
+                    <path d="M0,14 30,14" stroke="#000" stroke-width="5" />
+                    <path d="M0,23 30,23" stroke="#000" stroke-width="5" />
+                  </svg>
+                </a>
+              </nav>
+              <div class="overlayFullScreen show" onclick="closeNav()"></div>
+            </div>
             <img src="imgaes/ABC.png" alt="logo" class="search-img">
             <div class="input-search">
               <input type="text" placeholder="Tìm kiếm sản phẩm" class="input">
@@ -98,7 +114,7 @@
                 </svg>
                 <div>
                   <div class="shoppingCart hide">
-                    <p>Giỏ Hàng Của Tôi</p>
+                    <p>Giỏ Hàng Của Bé</p>
                     <div class="container-shoppingCart">
                       <div class="arrow-up"></div>
                       <ul class="list-item-added">
@@ -113,15 +129,24 @@
                           <tbody class="tableBody">
                           </tbody>
                         </table>
-
                       </ul>
                     </div>
-                    <button class="buttonDeleteAllItem" onClick="buttonDeleteAllItemCart()">Xoá Tất Cả Trong Giỏ
-                      Hàng</button>
+                    <button class="buttonDeleteAllItem" onClick="buttonDeleteAllItemCart()">Xoá Tất Cả Trong Giỏ Hàng</button>
+                    
                   </div>
                 </div>
                 <p class="countQuantity"></p>
               </span>
+            </div>
+            <div class="more-button-search" onclick="toggleLanguageMenu()">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M7 10l5 5 5-5H7z"></path>
+              </svg>
+            </div>
+            <!-- Menu lựa chọn ngôn ngữ -->
+            <div class="language-menu" id="languageMenu">
+              <div class="language-option"><img src="imgaes/vietnam.png" alt=""><span>Tiếng Việt</span></div>
+              <div class="language-option"><img src="imgaes/Anh.png" alt=""><span>English</span></div>
             </div>
           </div>
         </div>
@@ -146,6 +171,7 @@
                     </svg>
                   </a>
                 </nav>
+                <div class="overlayFullScreen show" onclick="closeNav()"></div>
               </div>
               <!-- Đang sửa tại đây -->
               <div class="container-logo2">
@@ -201,6 +227,16 @@
                 <span style="font-size: 14px;">Hotline:</span>
                 <span class="numberCall">0988 456 550</span>
               </div>
+              <div class="more-button-search" onclick="toggleLanguageMenu2()">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                  <path d="M7 10l5 5 5-5H7z"></path>
+                </svg>
+              </div>
+              <!-- Menu lựa chọn ngôn ngữ -->
+              <div class="language-menu" id="languageMenu">
+                <div class="language-option"><img src="imgaes/vietnam.png" alt=""><span>Vietnames</span></div>
+                <div class="language-option"><img src="imgaes/Anh.png" alt=""><span>English</span></div>
+              </div>
             </div>
             <div class="search-popup">
               <div class="search-bar">
@@ -224,7 +260,7 @@
       </div>
     </div>
   </header>
-  <main class="container container-lg container-md" onclick="buttonSwitches2()">
+  <main class="container padding-62 container-md" onclick="buttonSwitches2()">
     <!-- Phần Main-1 -->
     <div class="main-1">
       <img src="imgaes/birtday.png" alt="Ảnh Quảng Cáo" style="width: 100%; height: auto;">
@@ -236,123 +272,6 @@
       </div>
     </div>
     <!-- Phần Main-2 -->
-    <!-- <div class="row wrap main-2-container">
-      <div class="md-0 lg-6 padding-10">
-        <div class="main-2-banner">
-          <svg width="70" height="49" viewBox="0 0 70 49" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <g clip-path="url(#clip0_1_708)" filter="url(#filter0_d_1_708)">
-              <path d="M54.5504 16.303H61.7186V22.1455H54.5504V16.303Z" fill="#86F1A7" />
-              <path d="M41.769 16.303H48.9372V22.1455H41.769V16.303Z" fill="#86F1A7" />
-              <path d="M58.8605 16.303H61.7182V22.1455H58.8605V16.303Z" fill="#78D090" />
-              <path d="M46.0795 16.303H48.9372V22.1455H46.0795V16.303Z" fill="#78D090" />
-              <path
-                d="M61.7186 6.40235H54.5504V1.75122C54.5504 1.09321 55.0926 0.559814 55.7614 0.559814H60.5076C61.1764 0.559814 61.7186 1.09321 61.7186 1.75122V6.40235Z"
-                fill="#DD5790" />
-              <path
-                d="M48.9372 6.40235H41.769V1.75122C41.769 1.09321 42.3112 0.559814 42.98 0.559814H47.7262C48.395 0.559814 48.9372 1.09321 48.9372 1.75122V6.40235Z"
-                fill="#DD5790" />
-              <path
-                d="M36.1561 6.40235H28.988V1.75122C28.988 1.09321 29.5301 0.559814 30.1989 0.559814H34.9452C35.614 0.559814 36.1561 1.09321 36.1561 1.75122V6.40235Z"
-                fill="#DD5790" />
-              <path
-                d="M60.5072 0.559814H57.6136C58.3022 0.559814 58.8604 1.10905 58.8604 1.78649V6.40235H61.7181V1.75122C61.7181 1.09333 61.176 0.559814 60.5072 0.559814Z"
-                fill="#DA387D" />
-              <path
-                d="M47.7262 0.559814H44.8327C45.5212 0.559814 46.0795 1.10905 46.0795 1.78649V6.40235H48.9372V1.75122C48.9372 1.09333 48.395 0.559814 47.7262 0.559814Z"
-                fill="#DA387D" />
-              <path
-                d="M34.9452 0.559814H32.0516C32.7402 0.559814 33.2984 1.10905 33.2984 1.78649V6.40235H36.1561V1.75122C36.1561 1.09333 35.614 0.559814 34.9452 0.559814Z"
-                fill="#DA387D" />
-              <path
-                d="M64.7889 17.4252H25.9174C25.2486 17.4252 24.7064 16.8918 24.7064 16.2337V6.14575C24.7064 5.48774 25.2486 4.95435 25.9174 4.95435H64.7889C65.4577 4.95435 65.9999 5.48774 65.9999 6.14575V16.2337C65.9999 16.8918 65.4577 17.4252 64.7889 17.4252Z"
-                fill="#DD5790" />
-              <path
-                d="M64.7889 33.4689H25.9174C25.2486 33.4689 24.7064 32.9355 24.7064 32.2774V22.1895C24.7064 21.5314 25.2486 20.998 25.9174 20.998H64.7889C65.4577 20.998 65.9999 21.5314 65.9999 22.1895V32.2774C65.9999 32.9355 65.4577 33.4689 64.7889 33.4689Z"
-                fill="#86F1A7" />
-              <path
-                d="M64.7889 4.95435H62.4195V12.6758C62.4195 13.3533 61.8613 13.9025 61.1727 13.9025H24.7064V16.2337C24.7064 16.8918 25.2486 17.4251 25.9174 17.4251H64.7889C65.4577 17.4251 65.9999 16.8918 65.9999 16.2337V6.14575C65.9999 5.48774 65.4577 4.95435 64.7889 4.95435Z"
-                fill="#DA387D" />
-              <path
-                d="M64.7889 20.998H62.4195V28.7196C62.4195 29.397 61.8613 29.9462 61.1727 29.9462H24.7064V32.2774C24.7064 32.9355 25.2486 33.4689 25.9174 33.4689H64.7889C65.4577 33.4689 65.9999 32.9355 65.9999 32.2774V22.1895C65.9999 21.5314 65.4577 20.998 64.7889 20.998Z"
-                fill="#78D090" />
-              <path
-                d="M44.0825 40.4404H5.21094C4.54214 40.4404 4 39.907 4 39.249V16.6902C4 16.0322 4.54214 15.4988 5.21094 15.4988H44.0825C44.7513 15.4988 45.2934 16.0322 45.2934 16.6902V39.2489C45.2934 39.9069 44.7513 40.4404 44.0825 40.4404Z"
-                fill="#F6E266" />
-              <path
-                d="M44.0467 15.4988H41.7816V35.7585C41.7816 36.436 41.2235 36.9852 40.5348 36.9852H4V39.2137C4 39.8912 4.55812 40.4404 5.24678 40.4404H44.0468C44.7353 40.4404 45.2936 39.8912 45.2936 39.2137V16.7255C45.2935 16.048 44.7353 15.4988 44.0467 15.4988Z"
-                fill="#ECC32E" />
-              <path
-                d="M12.4358 26.2754C14.4469 26.2754 16.0773 24.6714 16.0773 22.6928C16.0773 20.7141 14.4469 19.1101 12.4358 19.1101C10.4247 19.1101 8.79443 20.7141 8.79443 22.6928C8.79443 24.6714 10.4247 26.2754 12.4358 26.2754Z"
-                fill="#ECC32E" />
-              <path
-                d="M12.4358 36.9505C14.4469 36.9505 16.0773 35.3465 16.0773 33.3678C16.0773 31.3892 14.4469 29.7852 12.4358 29.7852C10.4247 29.7852 8.79443 31.3892 8.79443 33.3678C8.79443 35.3465 10.4247 36.9505 12.4358 36.9505Z"
-                fill="#ECC32E" />
-              <path
-                d="M24.6466 26.2754C26.6577 26.2754 28.288 24.6714 28.288 22.6928C28.288 20.7141 26.6577 19.1101 24.6466 19.1101C22.6355 19.1101 21.0052 20.7141 21.0052 22.6928C21.0052 24.6714 22.6355 26.2754 24.6466 26.2754Z"
-                fill="#ECC32E" />
-              <path
-                d="M24.6466 36.9505C26.6577 36.9505 28.288 35.3465 28.288 33.3678C28.288 31.3892 26.6577 29.7852 24.6466 29.7852C22.6355 29.7852 21.0052 31.3892 21.0052 33.3678C21.0052 35.3465 22.6355 36.9505 24.6466 36.9505Z"
-                fill="#ECC32E" />
-              <path
-                d="M36.8581 26.2754C38.8692 26.2754 40.4995 24.6714 40.4995 22.6928C40.4995 20.7141 38.8692 19.1101 36.8581 19.1101C34.847 19.1101 33.2167 20.7141 33.2167 22.6928C33.2167 24.6714 34.847 26.2754 36.8581 26.2754Z"
-                fill="#ECC32E" />
-              <path
-                d="M36.8581 36.9505C38.8692 36.9505 40.4995 35.3465 40.4995 33.3678C40.4995 31.3892 38.8692 29.7852 36.8581 29.7852C34.847 29.7852 33.2167 31.3892 33.2167 33.3678C33.2167 35.3465 34.847 36.9505 36.8581 36.9505Z"
-                fill="#ECC32E" />
-              <path
-                d="M13.8305 19.3826C14.0087 19.8052 14.1075 20.2684 14.1075 20.7543C14.1075 22.733 12.4772 24.337 10.4661 24.337C9.97217 24.337 9.50136 24.2398 9.07184 24.0644C9.61918 25.3622 10.9191 26.2753 12.4362 26.2753C14.4473 26.2753 16.0776 24.6713 16.0776 22.6926C16.0775 21.2001 15.1495 19.9211 13.8305 19.3826Z"
-                fill="#E49824" />
-              <path
-                d="M13.8305 30.0576C14.0087 30.4802 14.1075 30.9434 14.1075 31.4294C14.1075 33.4081 12.4772 35.0121 10.4661 35.0121C9.97217 35.0121 9.50136 34.9149 9.07184 34.7395C9.61918 36.0373 10.9191 36.9504 12.4362 36.9504C14.4473 36.9504 16.0776 35.3464 16.0776 33.3677C16.0775 31.8751 15.1495 30.5961 13.8305 30.0576Z"
-                fill="#E49824" />
-              <path
-                d="M26.0408 19.3826C26.219 19.8052 26.3179 20.2684 26.3179 20.7543C26.3179 22.733 24.6876 24.337 22.6764 24.337C22.1825 24.337 21.7117 24.2398 21.2822 24.0644C21.8295 25.3622 23.1295 26.2753 24.6465 26.2753C26.6576 26.2753 28.2879 24.6713 28.2879 22.6926C28.2879 21.2001 27.36 19.9211 26.0408 19.3826Z"
-                fill="#E49824" />
-              <path
-                d="M26.0408 30.0576C26.219 30.4802 26.3179 30.9434 26.3179 31.4294C26.3179 33.4081 24.6876 35.0121 22.6764 35.0121C22.1825 35.0121 21.7117 34.9149 21.2822 34.7395C21.8295 36.0373 23.1295 36.9504 24.6465 36.9504C26.6576 36.9504 28.2879 35.3464 28.2879 33.3677C28.2879 31.8751 27.36 30.5961 26.0408 30.0576Z"
-                fill="#E49824" />
-              <path
-                d="M38.2517 19.3826C38.43 19.8052 38.5288 20.2684 38.5288 20.7543C38.5288 22.733 36.8985 24.337 34.8874 24.337C34.3934 24.337 33.9226 24.2398 33.4931 24.0644C34.0404 25.3622 35.3404 26.2753 36.8575 26.2753C38.8686 26.2753 40.4989 24.6713 40.4989 22.6926C40.4987 21.2001 39.5708 19.9211 38.2517 19.3826Z"
-                fill="#E49824" />
-              <path
-                d="M38.2517 30.0576C38.43 30.4802 38.5288 30.9434 38.5288 31.4294C38.5288 33.4081 36.8985 35.0121 34.8874 35.0121C34.3934 35.0121 33.9226 34.9149 33.4931 34.7395C34.0404 36.0373 35.3404 36.9504 36.8575 36.9504C38.8686 36.9504 40.4989 35.3464 40.4989 33.3677C40.4987 31.8751 39.5708 30.5961 38.2517 30.0576Z"
-                fill="#E49824" />
-            </g>
-            <defs>
-              <filter id="filter0_d_1_708" x="0" y="0" width="70" height="49" filterUnits="userSpaceOnUse"
-                color-interpolation-filters="sRGB">
-                <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
-                  result="hardAlpha" />
-                <feOffset dy="4" />
-                <feGaussianBlur stdDeviation="2" />
-                <feComposite in2="hardAlpha" operator="out" />
-                <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0" />
-                <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_1_708" />
-                <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_1_708" result="shape" />
-              </filter>
-              <clipPath id="clip0_1_708">
-                <rect width="62" height="41" fill="white" transform="translate(4)" />
-              </clipPath>
-            </defs>
-          </svg>
-          <div class="image-group-2">
-            <img src="imgaes/dochoixephinh.png" alt="Ảnh đồ chơi xếp hình" class="img1-main-banner">
-            <img src="imgaes/legoxephinh.png" alt="Ảnh Lego xếp hình" class="img2-main-banner">
-            <img src="imgaes/baby.png" alt="Ảnh baby" class="md-hidden">
-            <button class="main-2-btn lg">XEM THÊM</button>
-          </div>
-        </div>
-      </div>
-      <div class="md-12 lg-6 main-2-right padding-10">
-
-      </div>
-      <div class="md-12 lg-0 padding-10">
-        <div class="md-btn-center">
-          <button class="main-2-btn md">XEM THÊM</button>
-        </div>
-      </div>
-    </div> -->
     <div class="main-2">
       <div class="main-2-left">
         <svg width="70" height="49" viewBox="0 0 70 49" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -701,7 +620,7 @@
 
       <div class="main-10-PaymentMethod"
         style="background: linear-gradient(180deg, #F8DDDD 0%, rgba(241, 191, 191, 0.13) 100%)">
-        <svg width="71" height="71" viewBox="0 0 71 71" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg width="61" height="71" viewBox="0 0 71 71" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M48.045 19.6113L52.6072 24.185H38.9205L37.7799 19.6113H48.045Z" fill="#0084F4" />
           <path d="M37.78 19.6113L38.9206 24.185H32.0772H32.0544L33.2178 19.6113H37.78Z" fill="#CCD1D9" />
           <path d="M33.2178 19.6113L32.0544 24.185H18.3905L22.9527 19.6113H33.2178Z" fill="#0084F4" />
@@ -746,7 +665,7 @@
   </main>
   <footer class="container backgroundColorFooter">
     <div class="container container-lg container-md">
-      <div class="backgroundColorFooter">
+      <div class="container">
         <div class="footer-head">
           <img src="imgaes/footer-1.png" alt="" style="max-width: 212px;max-height: 97px;">
           <div class="register">
@@ -954,7 +873,7 @@
 
   <!-- Bảng thông báo xác nhận -->
   <div id="confirmPopup" class="confirm-popup" style="display: none;">
-    <p>Bạn có chắc chắn muốn xóa tất cả sản phẩm này không?</p>
+    <p>⚠️ Bạn có chắc chắn muốn xóa tất cả sản phẩm này không?</p>
     <button id="confirmYesBtn">Yes</button>
     <button id="confirmNoBtn">No</button>
   </div>
@@ -1013,7 +932,7 @@
       </svg>
       <div class="container-shopingCart">
         <div class="shoppingCartSideBar hide">
-          <p>Giỏ Hàng Của Tôi</p>
+          <p>Giỏ Hàng Của Bé</p>
           <div>
             <div class="arrow-upSideBar"></div>
             <ul class="list-item-added">
@@ -1031,7 +950,8 @@
 
             </ul>
           </div>
-          <button class="buttonDeleteAllItemSideBar" onClick="buttonDeleteAllItemCart()">Xoá Tất Cả Trong Giỏ Hàng</button>
+          <button class="buttonDeleteAllItemSideBar" onClick="buttonDeleteAllItemCart()">Xoá Tất Cả Trong Giỏ
+            Hàng</button>
         </div>
       </div>
       <p class="countQuantitySideBar"></p>
@@ -1078,7 +998,6 @@
           </clipPath>
         </defs>
       </svg>
-
     </a>
     <a href="https://zalo.me/yourphone" target="_blank" class="icon zalo">
       <svg width="37" height="38" viewBox="0 0 37 38" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1099,7 +1018,6 @@
           </clipPath>
         </defs>
       </svg>
-
     </a>
   </div>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
