--- a/site/main.html
+++ b/site/main.html
@@ -114,7 +114,7 @@
                 </svg>
                 <div>
                   <div class="shoppingCart hide">
-                    <p>Giỏ Hàng Của Bé</p>
+                    <p>🛒 Giỏ Hàng Của Bé 🧸</p>
                     <div class="container-shoppingCart">
                       <div class="arrow-up"></div>
                       <ul class="list-item-added">
@@ -131,7 +131,7 @@
                         </table>
                       </ul>
                     </div>
-                    <button class="buttonDeleteAllItem" onClick="buttonDeleteAllItemCart()">Xoá Tất Cả Trong Giỏ Hàng</button>
+                    <button class="buttonDeleteAllItem" onClick="buttonDeleteAllItemCart()">🗑️ Xoá Tất Cả Trong Giỏ Hàng</button>
                     
                   </div>
                 </div>
@@ -139,9 +139,7 @@
               </span>
             </div>
             <div class="more-button-search" onclick="toggleLanguageMenu()">
-              <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-                <path d="M7 10l5 5 5-5H7z"></path>
-              </svg>
+              <i class="fas fa-ellipsis-v"></i>
             </div>
             <!-- Menu lựa chọn ngôn ngữ -->
             <div class="language-menu" id="languageMenu">
@@ -207,14 +205,19 @@
                 </span>
                 <span class="link-nav"></span>
               </div>
-              <div class="nav-search">
-                <span class="search-icon">
-                  <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="25" viewBox="0 0 128 128">
-                    <path
-                      d="M 56.599609 21.599609 C 34.099609 21.599609 15.800781 40.100781 15.800781 62.800781 C 15.800781 85.600781 34.099609 104 56.599609 104 C 66.899609 104 76.3 100.09922 83.5 93.699219 L 85.800781 96 L 83.699219 98.199219 C 82.499219 99.399219 82.499219 101.3 83.699219 102.5 L 101.69922 120.69922 C 102.29922 121.29922 103.00078 121.59961 103.80078 121.59961 C 104.60078 121.59961 105.40039 121.29922 105.90039 120.69922 L 113.90039 112.59961 C 115.00039 111.39961 115.00078 109.50039 113.80078 108.40039 L 95.800781 90.199219 C 95.200781 89.599219 94.499219 89.300781 93.699219 89.300781 C 92.899219 89.300781 92.099609 89.599219 91.599609 90.199219 L 89.5 92.400391 L 87.199219 90 C 93.499219 82.7 97.400391 73.200781 97.400391 62.800781 C 97.400391 40.100781 79.099609 21.599609 56.599609 21.599609 z M 56.599609 27.699219 C 75.799609 27.699219 91.400391 43.500391 91.400391 62.900391 C 91.400391 82.300391 75.799609 98 56.599609 98 C 37.399609 98 21.800781 82.300391 21.800781 62.900391 C 21.800781 43.500391 37.399609 27.699219 56.599609 27.699219 z M 56.699219 40.199219 C 47.199219 40.199219 38.7 46.300781 35.5 55.300781 C 35 56.600781 35.699609 58.199609 37.099609 58.599609 C 37.399609 58.699609 37.7 58.800781 38 58.800781 C 39.1 58.800781 40.1 58.1 40.5 57 C 42.9 50.1 49.499219 45.400391 56.699219 45.400391 C 58.099219 45.400391 59.300781 44.200781 59.300781 42.800781 C 59.300781 41.400781 58.099219 40.199219 56.699219 40.199219 z M 37.699219 64.900391 C 36.299219 64.900391 35.099609 66 35.099609 67.5 L 35.099609 67.900391 C 35.199609 69.300391 36.300781 70.5 37.800781 70.5 C 39.200781 70.5 40.400391 69.300391 40.400391 67.900391 L 40.400391 67.599609 C 40.400391 66.099609 39.300781 64.900391 37.800781 64.900391 L 37.699219 64.900391 z M 93.800781 96.599609 L 107.59961 110.59961 L 103.80078 114.40039 L 90 100.40039 L 93.800781 96.599609 z">
-                    </path>
-                  </svg>
-                </span>
+              <div style="display: flex; gap: 10px; align-items: center;">
+                <div class="nav-search">
+                  <span class="search-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="25" viewBox="0 0 128 128">
+                      <path
+                        d="M 56.599609 21.599609 C 34.099609 21.599609 15.800781 40.100781 15.800781 62.800781 C 15.800781 85.600781 34.099609 104 56.599609 104 C 66.899609 104 76.3 100.09922 83.5 93.699219 L 85.800781 96 L 83.699219 98.199219 C 82.499219 99.399219 82.499219 101.3 83.699219 102.5 L 101.69922 120.69922 C 102.29922 121.29922 103.00078 121.59961 103.80078 121.59961 C 104.60078 121.59961 105.40039 121.29922 105.90039 120.69922 L 113.90039 112.59961 C 115.00039 111.39961 115.00078 109.50039 113.80078 108.40039 L 95.800781 90.199219 C 95.200781 89.599219 94.499219 89.300781 93.699219 89.300781 C 92.899219 89.300781 92.099609 89.599219 91.599609 90.199219 L 89.5 92.400391 L 87.199219 90 C 93.499219 82.7 97.400391 73.200781 97.400391 62.800781 C 97.400391 40.100781 79.099609 21.599609 56.599609 21.599609 z M 56.599609 27.699219 C 75.799609 27.699219 91.400391 43.500391 91.400391 62.900391 C 91.400391 82.300391 75.799609 98 56.599609 98 C 37.399609 98 21.800781 82.300391 21.800781 62.900391 C 21.800781 43.500391 37.399609 27.699219 56.599609 27.699219 z M 56.699219 40.199219 C 47.199219 40.199219 38.7 46.300781 35.5 55.300781 C 35 56.600781 35.699609 58.199609 37.099609 58.599609 C 37.399609 58.699609 37.7 58.800781 38 58.800781 C 39.1 58.800781 40.1 58.1 40.5 57 C 42.9 50.1 49.499219 45.400391 56.699219 45.400391 C 58.099219 45.400391 59.300781 44.200781 59.300781 42.800781 C 59.300781 41.400781 58.099219 40.199219 56.699219 40.199219 z M 37.699219 64.900391 C 36.299219 64.900391 35.099609 66 35.099609 67.5 L 35.099609 67.900391 C 35.199609 69.300391 36.300781 70.5 37.800781 70.5 C 39.200781 70.5 40.400391 69.300391 40.400391 67.900391 L 40.400391 67.599609 C 40.400391 66.099609 39.300781 64.900391 37.800781 64.900391 L 37.699219 64.900391 z M 93.800781 96.599609 L 107.59961 110.59961 L 103.80078 114.40039 L 90 100.40039 L 93.800781 96.599609 z">
+                      </path>
+                    </svg>
+                  </span>
+                </div>
+                <div class="more-button-search" onclick="toggleLanguageMenu2()">
+                  <i class="fas fa-ellipsis-v"></i>
+                </div>
               </div>
               <div class="contact">
                 <span>
@@ -226,11 +229,6 @@
                 </span>
                 <span style="font-size: 14px;">Hotline:</span>
                 <span class="numberCall">0988 456 550</span>
-              </div>
-              <div class="more-button-search" onclick="toggleLanguageMenu2()">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-                  <path d="M7 10l5 5 5-5H7z"></path>
-                </svg>
               </div>
               <!-- Menu lựa chọn ngôn ngữ -->
               <div class="language-menu" id="languageMenu">
@@ -400,24 +398,23 @@
       <div class="swiper2" style="margin-top: 30px">
         <div class="swiper-wrapper wrapper2">
         </div>
-
-        <button class="swiper-button-next2"><svg width="46" height="46" viewBox="0 0 46 46" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <path d="M0.5 0.5H45.5V45.5H0.5V0.5Z" fill="white" stroke="#DDDDDD" />
-            <path
-              d="M19.543 25.457L25.6367 31.5508C26.0664 31.9805 26.4961 31.9805 26.9258 31.5508C27.1211 31.3555 27.2188 31.1406 27.2188 30.9062C27.2188 30.6328 27.1211 30.418 26.9258 30.2617L21.5352 24.8125L26.9258 19.3633C27.3945 18.9336 27.3945 18.5039 26.9258 18.0742C26.4961 17.6445 26.0664 17.6445 25.6367 18.0742L19.543 24.168C19.3477 24.3242 19.25 24.5391 19.25 24.8125C19.25 25.0859 19.3477 25.3008 19.543 25.457Z"
-              fill="#888888" />
-          </svg>
-        </button>
-        <button class="swiper-button-prev2"><svg width="46" height="46" viewBox="0 0 46 46" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <path d="M0.5 0.5H45.5V45.5H0.5V0.5Z" fill="white" stroke="#DDDDDD" />
-            <path
-              d="M20.9492 30.2617C20.4805 30.6914 20.4609 31.1211 20.8906 31.5508C21.3594 31.9805 21.8086 31.9805 22.2383 31.5508L28.332 25.457C28.5273 25.3008 28.625 25.0859 28.625 24.8125C28.625 24.5391 28.5273 24.3242 28.332 24.168L22.2383 18.0742C21.8086 17.6445 21.3594 17.6445 20.8906 18.0742C20.4609 18.5039 20.4805 18.9336 20.9492 19.3633L26.3398 24.8125L20.9492 30.2617Z"
-              fill="#888888" />
-          </svg>
-        </button>
       </div>
+      <button class="swiper-button-next2"><svg width="46" height="46" viewBox="0 0 46 46" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path d="M0.5 0.5H45.5V45.5H0.5V0.5Z" fill="white" stroke="#DDDDDD" />
+          <path
+            d="M19.543 25.457L25.6367 31.5508C26.0664 31.9805 26.4961 31.9805 26.9258 31.5508C27.1211 31.3555 27.2188 31.1406 27.2188 30.9062C27.2188 30.6328 27.1211 30.418 26.9258 30.2617L21.5352 24.8125L26.9258 19.3633C27.3945 18.9336 27.3945 18.5039 26.9258 18.0742C26.4961 17.6445 26.0664 17.6445 25.6367 18.0742L19.543 24.168C19.3477 24.3242 19.25 24.5391 19.25 24.8125C19.25 25.0859 19.3477 25.3008 19.543 25.457Z"
+            fill="#888888" />
+        </svg>
+      </button>
+      <button class="swiper-button-prev2"><svg width="46" height="46" viewBox="0 0 46 46" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path d="M0.5 0.5H45.5V45.5H0.5V0.5Z" fill="white" stroke="#DDDDDD" />
+          <path
+            d="M20.9492 30.2617C20.4805 30.6914 20.4609 31.1211 20.8906 31.5508C21.3594 31.9805 21.8086 31.9805 22.2383 31.5508L28.332 25.457C28.5273 25.3008 28.625 25.0859 28.625 24.8125C28.625 24.5391 28.5273 24.3242 28.332 24.168L22.2383 18.0742C21.8086 17.6445 21.3594 17.6445 20.8906 18.0742C20.4609 18.5039 20.4805 18.9336 20.9492 19.3633L26.3398 24.8125L20.9492 30.2617Z"
+            fill="#888888" />
+        </svg>
+      </button>
     </div>
     <!-- Phần Main-4 -->
     <div class="main-4">
@@ -932,7 +929,7 @@
       </svg>
       <div class="container-shopingCart">
         <div class="shoppingCartSideBar hide">
-          <p>Giỏ Hàng Của Bé</p>
+          <p>🛒 Giỏ Hàng Của Bé 🧸</p>
           <div>
             <div class="arrow-upSideBar"></div>
             <ul class="list-item-added">
@@ -950,8 +947,7 @@
 
             </ul>
           </div>
-          <button class="buttonDeleteAllItemSideBar" onClick="buttonDeleteAllItemCart()">Xoá Tất Cả Trong Giỏ
-            Hàng</button>
+          <button class="buttonDeleteAllItemSideBar" onClick="buttonDeleteAllItemCart()">🗑️ Xoá Tất Cả Trong Giỏ Hàng</button>
         </div>
       </div>
       <p class="countQuantitySideBar"></p>
@@ -959,7 +955,7 @@
 
   </div>
   <div class="sidebar">
-    <a href="#top" class="icon back-to-top">
+    <a class="icon back-to-top">
       <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
         <g clip-path="url(#clip0_1_1233)">
           <path
@@ -1020,6 +1016,9 @@
       </svg>
     </a>
   </div>
+
+
+  
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script src="script.js"></script>
 </body>
