--- a/myproject/Home.html
+++ b/myproject/Home.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <header class="container header-green">
+  <header class="container header-green" id="header">
     <img src="imgaes/header.png" alt="Ảnh Banner" class="img-banner">
     <div class="container container-lg container-md header-green">
       <div class="row header wrap">
@@ -258,7 +258,7 @@
       </div>
     </div>
   </header>
-  <main class="container padding-62 container-md" onclick="buttonSwitches2()">
+  <main class="container padding-62 container-md" id="main" onclick="buttonSwitches2()">
     <!-- Phần Main-1 -->
     <div class="main-1">
       <img src="imgaes/birtday.png" alt="Ảnh Quảng Cáo" style="width: 100%; height: auto;">
@@ -660,7 +660,7 @@
       </div>
     </div>
   </main>
-  <footer class="container backgroundColorFooter">
+  <footer class="container backgroundColorFooter" id="footer">
     <div class="container container-lg container-md">
       <div class="container">
         <div class="footer-head">
@@ -1017,10 +1017,7 @@
     </a>
   </div>
 
-
-  
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script src="script.js"></script>
 </body>
-
 </html>
