--- a/myproject/DetailProduct/detailProduct.html
+++ b/myproject/DetailProduct/detailProduct.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detail-Product</title>
-    <link rel="stylesheet" href="detailproduct.css">
+    <link rel="stylesheet" href="./detailproduct.css">
+    <link rel="stylesheet" href="../site.css">
+    <link rel="stylesheet" href="../footer.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
-    
     <script src="detailproduct.js"></script>
 </body>
+
 </html>
